# nioca-client

./: .env  .gitignore  Cargo.toml  README.md  build-cli.sh  justfile
src/: actix.rs  axum.rs  cli.rs  generic.rs  lib.rs  main.rs
src/nioca-actix/: Cargo.toml
src/nioca-actix/src/: lib.rs
src/nioca-axum/: Cargo.toml
src/nioca-axum/src/: lib.rs
src/nioca-client/: Cargo.toml
src/nioca-client-app/: Cargo.toml
src/nioca-client-app/src/: constants.rs  error_template.rs  lib.rs
src/nioca-client-app/src/components/: mod.rs
src/nioca-client-app/src/components/animation/: mod.rs  theme_switch.rs
src/nioca-client-app/src/components/common/: button.rs  check_icon.rs  loading.rs  mod.rs  tab_bar.rs  tooltip.rs
src/nioca-client-app/src/components/icons/: icon_cash.rs  icon_chat.rs  icon_check.rs  icon_chevron_right.rs  icon_clipboard.rs  icon_clock.rs  icon_credit_card.rs  icon_database.rs  icon_edit.rs  icon_exclamation.rs  icon_eye.rs  icon_eye_slash.rs  icon_folder.rs  icon_home.rs  icon_info.rs  icon_logout.rs  icon_magnify.rs  icon_moon.rs  icon_no_symbol.rs  icon_plus.rs  icon_scissors.rs  icon_shield_check.rs  icon_stop.rs  icon_sun.rs  icon_thumb_down.rs  icon_thumb_up.rs  icon_trash.rs  icon_truck.rs  icon_users.rs  icon_wrench_screw.rs  mod.rs
src/nioca-client-app/src/components/inputs/: date_input.rs  input.rs  mod.rs  password_input.rs  switch.rs  textarea.rs
src/nioca-client-app/src/components/nav/: mod.rs  nav_index.rs  nav_main.rs
src/nioca-client-app/src/components/search/: search_bar.rs
src/nioca-client-app/src/components/selectors/: options.rs
src/nioca-client-app/src/routes/: index.rs
src/nioca-client-app/src/utils/: helpers.rs  mod.rs  patterns.rs
src/nioca-client-app/style/: main.scss
src/nioca-client-backend/: Cargo.toml  build.rs
src/nioca-client-backend/src/: app_state.rs  lib.rs  logging.rs  routes_handler.rs  static_handler.rs
src/nioca-client-frontend/: Cargo.toml
src/nioca-client-frontend/src/: lib.rs
src/nioca-client/src/: cli.rs  main.rs
src/nioca-common/: Cargo.toml
src/nioca-common/src/: lib.rs  ssh.rs  x509.rs
src/nioca-generic/: Cargo.toml
src/nioca-generic/src/: lib.rs
tests/end2end/: playwright.config.ts
