[package]
name = "nioca-client"
version = "0.4.0-20231104"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[features]
axum = ["dep:axum-server"]
actix = ["dep:actix-web", "dep:rustls"]
cli = ["ssh", "dep:clap", "dep:hex", "dep:home", "dep:ring"]
generic = []
ssh = ["dep:ssh-key"]

[dependencies]
actix-web = { version = "4.2", optional = true, features = ["rustls-0_21"] }
anyhow = "1"
axum-server = { version = "0.5", optional = true, features = ["tls-rustls"] }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde", "std"] }
clap = { version = "4.1", optional = true, features = ["derive"] }
ctrlc = {  version = "3.4.1", features = ["termination"] }
der = { version = "0.7", features = ["std", "pem"] }
dotenvy = "0.15"
flume = "0.11"
headers = "0.3"
hex = { version = "0.4", optional = true }
home = { version = "0.5", optional = true }
once_cell = "1.17"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
ring = { version = "0.17", optional = true }
rustls = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = { version = "0.6", optional = true }
tokio = { version = "1.26", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
x509-parser = { version = "0.15", features = ["ring", "validate", "verify"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
