[package]
name = "nioca-client"
version = "0.5.0-20231114"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[features]
axum = [
    "dep:axum-server",
]
actix = [
    "dep:actix-web",
    "dep:der",
    "dep:rustls",
]
cli = [
    "ssh",

    "dep:base64",
    "dep:clap",
    "dep:ctrlc",
    "dep:flume",
    "dep:headers",
    "dep:hex",
    "dep:home",
    "dep:ring",
    "dep:rpassword",
    "dep:serde_json",
    "dep:x509-parser",
]
generic = []
ssh = ["dep:ssh-key"]

[dependencies]
# common deps
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde", "std"] }
dotenvy = "0.15"
once_cell = "1.17"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
# todo we probably do not need 'full' for everything -> split up by feature
tokio = { version = "1.26", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }

# actix
actix-web = { version = "4.2", optional = true, features = ["rustls-0_21"] }
der = { version = "0.7", optional = true, features = ["std", "pem"] }
rustls = { version = "0.21", optional = true }

# axum
axum-server = { version = "0.5", optional = true, features = ["tls-rustls"] }

# cli
base64 = {  version = "0.21", optional = true }
clap = { version = "4.1", optional = true, features = ["derive"] }
ctrlc = {  version = "3.4.1", optional = true, features = ["termination"] }
flume = {  version = "0.11", optional = true }
headers = {  version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
home = { version = "0.5", optional = true }
ring = { version = "0.17", optional = true }
rpassword = {  version = "7.2", optional = true }
serde_json = {  version = "1", optional = true }
ssh-key = { version = "0.6", optional = true }
x509-parser = { version = "0.15", optional = true, features = ["ring", "validate", "verify"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
