[package]
name = "nioca-actix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-web = { version = "4.2", features = ["rustls-0_21"] }
anyhow = "1.0.75"
der = { version = "0.7", features = ["std", "pem"] }
nioca-common = { path = "../nioca-common" }
rustls = { version = "0.21" }
tokio = { version = "1.26", features = [] }
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
