[package]
name = "nioca-client-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[dependencies]
#common = { path = "../common" }

cfg-if = "1"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "wasmbind"] }
console_error_panic_hook = "0.1"
console_log = "1"
#futures-util = "0.3.28"
#gloo-net = { version = "0.4", features = ["http"] }
http = "0.2.8"
#image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
js-sys = "0.3.64"
leptos = { version = "0.5.2", default-features = false, features = [] }
leptos_axum = { version = "0.5.2", optional = true, features = ["nonce"] }
leptos_meta = { version = "0.5.2", features = [] }
leptos_router = { version = "0.5.2", features = [] }
#leptos-use = { version = "0.6.0", features = ["ssr", "storage"] }
log = "0.4"
#miniserde = "0.1.34"
serde = { version = "1.0", default-features = false,  features = ["alloc"] }
#serde_json = "1"
thiserror = "1.0.38"
#uuid = { version = "1", features = ["serde"] }
wasm-bindgen = "=0.2.88"
wasm-bindgen-futures = "0.4.37"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.65", features = [
    "Blob",
    "Cache",
    "Clipboard",
    "DataTransfer",
    "DragEvent",
#    "DocumentFragment",
    "File",
    "FileList",
    "FormData",
    "HtmlDocument",
    "HtmlElement",
    "HtmlInputElement",
#    "HtmlTemplateElement",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }
#wasm-streams = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.26.0", features = [] }
#accept-language = "3"
axum = { version = "0.6.4", features = ["headers", "http2"] }
axum-extra = { version = "0.8", features = ["async-read-body", "cookie", "multipart"] }
serde = { version = "1.0",  features = ["derive"] }
#serde_json = "1"
tracing = "0.1.37"
